opt: 适配Java1.8、在build时不再再运行MockBridgeTests